Perma builds/worker/workspace/build/src/gfx/webrender_bindings/WebRenderAPI.cpp:83:13: error: 'gfx_webrender_start_debug_server' is not a member of 'mozilla::StaticPrefs' when Gecko 71 merges to Beta on 2019-10-14
Categories
(Core :: Graphics: WebRender, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox-esr68 | --- | unaffected |
firefox69 | --- | unaffected |
firefox70 | --- | unaffected |
firefox71 | --- | verified |
People
(Reporter: rmaries, Assigned: KrisWright)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
Central as Beta Simulation
Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=264704577&repo=try&lineNumber=21039
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - In file included from /builds/worker/workspace/build/src/obj-firefox/gfx/webrender_bindings/Unified_cpp_webrender_bindings0.cpp:101:0:
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - /builds/worker/workspace/build/src/gfx/webrender_bindings/WebRenderAPI.cpp: In member function 'virtual void mozilla::wr::NewRenderer::Run(mozilla::wr::RenderThread&, mozilla::wr::WindowId)':
[task 2019-09-03T10:22:01.243Z] 10:22:01 ERROR - /builds/worker/workspace/build/src/gfx/webrender_bindings/WebRenderAPI.cpp:83:13: error: 'gfx_webrender_start_debug_server' is not a member of 'mozilla::StaticPrefs'
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - StaticPrefs::gfx_webrender_start_debug_server(), compositor->gl(),
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - ^~~~~~~~~~~
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - /builds/worker/workspace/build/src/config/rules.mk:787: recipe for target 'Unified_cpp_webrender_bindings0.o' failed
[task 2019-09-03T10:22:01.243Z] 10:22:01 ERROR - make[4]: *** [Unified_cpp_webrender_bindings0.o] Error 1
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/gfx/webrender_bindings'
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - /builds/worker/workspace/build/src/config/recurse.mk:74: recipe for target 'gfx/webrender_bindings/target-objects' failed
[task 2019-09-03T10:22:01.243Z] 10:22:01 ERROR - make[3]: *** [gfx/webrender_bindings/target-objects] Error 2
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - make[3]: *** Waiting for unfinished jobs....
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/gfx/tests/gtest'
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - gfx/tests/gtest/Unified_cpp_gfx_tests_gtest1.o
[task 2019-09-03T10:22:01.243Z] 10:22:01 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/gfx/tests/gtest'
[task 2019-09-03T10:22:01.367Z] 10:22:01 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/gfx/layers'
[task 2019-09-03T10:22:01.369Z] 10:22:01 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ -o X11TextureHost.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/stl_wrappers -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DGOOGLE_PROTOBUF_NO_RTTI -DGOOGLE_PROTOBUF_NO_STATIC_INITIALIZER -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/worker/workspace/build/src/gfx/layers -I/builds/worker/workspace/build/src/obj-firefox/gfx/layers -I/builds/worker/workspace/build/src/obj-firefox/ipc/ipdl/_ipdlheaders -I/builds/worker/workspace/build/src/ipc/chromium/src -I/builds/worker/workspace/build/src/ipc/glue -I/builds/worker/workspace/build/src/docshell/base -I/builds/worker/workspace/build/src/layout/base -I/builds/worker/workspace/build/src/layout/generic -I/builds/worker/workspace/build/src/media/libyuv/libyuv/include -I/builds/worker/workspace/build/src/gfx/skia -I/builds/worker/workspace/build/src/gfx/skia/skia/include/config -I/builds/worker/workspace/build/src/gfx/skia/skia/include/core -I/builds/worker/workspace/build/src/gfx/skia/skia/include/docs -I/builds/worker/workspace/build/src/gfx/skia/skia/include/gpu -I/builds/worker/workspace/build/src/gfx/skia/skia/include/utils -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/mozilla-config.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wduplicated-cond -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fomit-frame-pointer -funwind-tables -Werror -I/builds/worker/workspace/build/src/obj-firefox/dist/include/cairo -I/builds/worker/workspace/build/src/widget/gtk/compat-gtk3 -pthread -I/usr/include/gtk-3.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/freetype2 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/libpng12 -I/usr/include/gtk-3.0/unix-print -Wno-error=shadow -Wno-maybe-uninitialized -MD -MP -MF .deps/X11TextureHost.o.pp /builds/worker/workspace/build/src/gfx/layers/composite/X11TextureHost.cpp
[task 2019-09-03T10:22:01.370Z] 10:22:01 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/gfx/layers'
[task 2019-09-03T10:22:01.370Z] 10:22:01 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/gfx/layers'
[task 2019-09-03T10:22:01.370Z] 10:22:01 INFO - gfx/layers/Unified_cpp_gfx_layers12.o
[task 2019-09-03T10:22:01.370Z] 10:22:01 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/gfx/layers'
[task 2019-09-03T10:22:04.109Z] 10:22:04 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/image/build'
[task 2019-09-03T10:22:04.109Z] 10:22:04 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ -o nsImageModule.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/stl_wrappers -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/worker/workspace/build/src/image/build -I/builds/worker/workspace/build/src/obj-firefox/image/build -I/builds/worker/workspace/build/src/image -I/builds/worker/workspace/build/src/image/encoders/bmp -I/builds/worker/workspace/build/src/image/encoders/ico -I/builds/worker/workspace/build/src/image/encoders/jpeg -I/builds/worker/workspace/build/src/image/encoders/png -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/mozilla-config.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wduplicated-cond -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fomit-frame-pointer -funwind-tables -Werror -MD -MP -MF .deps/nsImageModule.o.pp /builds/worker/workspace/build/src/image/build/nsImageModule.cpp
[task 2019-09-03T10:22:04.109Z] 10:22:04 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/image/build'
[task 2019-09-03T10:22:04.109Z] 10:22:04 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/gfx/layers'
[task 2019-09-03T10:22:04.109Z] 10:22:04 INFO - gfx/layers/Unified_cpp_gfx_layers2.o
[task 2019-09-03T10:22:04.109Z] 10:22:04 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/gfx/layers'
[task 2019-09-03T10:22:09.992Z] 10:22:09 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/gfx/layers'
[task 2019-09-03T10:22:09.994Z] 10:22:09 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ -o ShadowLayerUtilsX11.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/stl_wrappers -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DGOOGLE_PROTOBUF_NO_RTTI -DGOOGLE_PROTOBUF_NO_STATIC_INITIALIZER -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/worker/workspace/build/src/gfx/layers -I/builds/worker/workspace/build/src/obj-firefox/gfx/layers -I/builds/worker/workspace/build/src/obj-firefox/ipc/ipdl/_ipdlheaders -I/builds/worker/workspace/build/src/ipc/chromium/src -I/builds/worker/workspace/build/src/ipc/glue -I/builds/worker/workspace/build/src/docshell/base -I/builds/worker/workspace/build/src/layout/base -I/builds/worker/workspace/build/src/layout/generic -I/builds/worker/workspace/build/src/media/libyuv/libyuv/include -I/builds/worker/workspace/build/src/gfx/skia -I/builds/worker/workspace/build/src/gfx/skia/skia/include/config -I/builds/worker/workspace/build/src/gfx/skia/skia/include/core -I/builds/worker/workspace/build/src/gfx/skia/skia/include/docs -I/builds/worker/workspace/build/src/gfx/skia/skia/include/gpu -I/builds/worker/workspace/build/src/gfx/skia/skia/include/utils -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/mozilla-config.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wduplicated-cond -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fomit-frame-pointer -funwind-tables -Werror -I/builds/worker/workspace/build/src/obj-firefox/dist/include/cairo -I/builds/worker/workspace/build/src/widget/gtk/compat-gtk3 -pthread -I/usr/include/gtk-3.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/freetype2 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/libpng12 -I/usr/include/gtk-3.0/unix-print -Wno-error=shadow -Wno-maybe-uninitialized -MD -MP -MF .deps/ShadowLayerUtilsX11.o.pp /builds/worker/workspace/build/src/gfx/layers/ipc/ShadowLayerUtilsX11.cpp
Kris, it looks like bug 1575983 is the culprit. Could you take a look?
Assignee | ||
Comment 1•5 years ago
|
||
(In reply to Razvan Maries from comment #0)
Kris, it looks like bug 1575983 is the culprit. Could you take a look?
The pref gfx.webrender.start-debug-server
is only visible in nightly builds, per the comment here: https://searchfox.org/mozilla-central/rev/9bb55ae4d808fc48afcf93f99da6a685265b86c6/modules/libpref/init/StaticPrefList.yaml#3535-3536
Looks like this rule may have changed, because if it can't find the pref then it must be using the pref outside of Nightly builds. This would explain why the static pref was declared globally and perhaps the all.js comment had fallen out of sync. I guess the most simple option would be to make this pref visible outside of Nightly builds again.
njn, what do you think?
Updated•5 years ago
|
![]() |
||
Comment 2•5 years ago
|
||
Yes, the comment about this pref (gfx.webrender.start-debug-server
) being hidden in non-Nightly is clearly wrong. I'm sure there's a Zen koan that applies here, something about trusting the comments vs. trusting the code.
I see two options:
- Make the pref visible in all builds and remove the comment. This would restore the old behaviour.
- Change the use so the pref is only accessed on Nightly builds, and
false
is used otherwise.
gw, what do you think? Should this pref be present in non-Nightly builds?
Comment 3•5 years ago
|
||
Are we "just" talking about the preference here, rather than the functionality that goes with it?
The functionality should definitely only be available on Nightly builds. It would be better, I think, if the visibility of the preference was also only on Nightly builds, to avoid confusion if anyone tries to enable it on a non-Nightly build.
Comment 4•5 years ago
|
||
FWIW the original intent was to have the pref work on all channels, but only be listed in about:config on Nightly. It would be a "hidden" pref on beta and release. That's what the comment means. But I guess the new yaml format doesn't allow that?
![]() |
||
Comment 5•5 years ago
|
||
But I guess the new yaml format doesn't allow that?
Correct. If you have an old-style VarCache pref, you can have a C++ variable that mirrors a pref's value even if the pref doesn't exist. (There's a default value provided when you crate the VarCache pref.) But static prefs defined in the YAML don't have this flexibility because it's confusing and rarely needed and complicates the implementation. And we're gradually eliminating VarCache prefs.
From what gw said, it sounds like the "Nightly only" option from comment 2 is best. I understand that this is more restrictive than what existed previously, but hopefully it's good enough. (If you really do need to run the server on beta/release, you could use the other option from comment 2, at the risk of users enabling it.)
Comment 6•5 years ago
|
||
Yeah, "Nightly only" sounds fine then. Thanks!
Comment 7•5 years ago
|
||
Nicholas - just so I am clear, will you be making the change or do you need someone from the GFX team to do it?
![]() |
||
Comment 8•5 years ago
|
||
I nominate KrisWright, being the author of bug 1575983 :)
Assignee | ||
Comment 9•5 years ago
|
||
Falls back to 'false' in non-nightly builds instead of using the gfx.webrender.start-debug-server pref, which is only available in nightly builds.
Assignee | ||
Comment 10•5 years ago
|
||
(In reply to Nicholas Nethercote [:njn] from comment #8)
I nominate KrisWright, being the author of bug 1575983 :)
I've got a patch up for it.
![]() |
||
Updated•5 years ago
|
Comment 11•5 years ago
|
||
Comment 12•5 years ago
|
||
bugherder |
Comment 13•5 years ago
|
||
Verified in today's beta-sim: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=success%2Ctestfailed%2Cbusted%2Cexception&revision=cb853226098e88a353228488821cf30d3c106ad0&searchStr=build
Updated•5 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Description
•