Bug 1578378 - use 'false' instead of hidden static pref in non-nightly builds r=gw

Falls back to 'false' in non-nightly builds instead of using the gfx.webrender.start-debug-server pref, which is only available in nightly builds.

Differential Revision: https://phabricator.services.mozilla.com/D44743